<project xmlns="http://maven.apache.org/POM/4.0.0"
       	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.jcoderz.keytoolz</groupId>
	<artifactId>keystoreexplorer</artifactId>
	<packaging>jar</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>keystoreexplorer</name>
	<url>http://maven.apache.org</url>
	<!--<properties>
  <artifactId>maven-compiler-plugin</artifactId>
  <maven.compiler.source>17</maven.compiler.source>
	<maven.compiler.target>17</maven.compiler.target>
  <configuration>
  <maven.compiler.source>17</maven.compiler.source>
	<maven.compiler.target>17</maven.compiler.target>
	<compilerArgs>
                <arg>add-exports</arg><arg>java.base/sun.security.util=ALL-UNNAMED</arg>
                <arg>add-exports</arg><arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
    </compilerArgs>
	</configuration>
  </properties>-->
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>xalan</groupId>
			<artifactId>xalan</artifactId>
			<version>2.7.0</version>
		</dependency>
		<dependency>
			<groupId>xerces</groupId>
			<artifactId>xercesImpl</artifactId>
			<version>2.12.1</version>
		</dependency>
		<dependency>
			<groupId>org.jcoderz.fawkez</groupId>
			<artifactId>fawkez-commons</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>bouncycastle</groupId>
			<artifactId>bcprov-jdk16</artifactId>
			<version>140</version>
		</dependency>
		<dependency>
			<groupId>org.swinglabs</groupId>
			<artifactId>swing-layout</artifactId>
			<version>1.0.3</version>
		</dependency>
		<dependency>
			<groupId>net.imagej</groupId>
			<artifactId>ij</artifactId>
			<version>1.53j</version>
		</dependency>
	</dependencies>
	<build>
		<sourceDirectory>src/java</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>17</source>
					<target>17</target>
					<compilerArgs>
						<arg>--add-exports=java.base/sun.security.util=ALL-UNNAMED</arg>
						<arg>--add-exports=java.base/sun.security.x509=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<mainClass>org.jcoderz.keytoolz.keystoreexplorer.KeyStoreExplorer</mainClass>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
					
						<manifest>
						
							<addClasspath>true</addClasspath>
							<mainClass>org.jcoderz.keytoolz.keystoreexplorer.KeyStoreExplorer</mainClass>
						
						</manifest>
					
					</archive>
				<!--<includes><include>images/*.*</include></includes>-->
				</configuration>
			</plugin>
			<!--<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.0.2</version>
				<executions>
					<execution>
						<id>copy-resource-one</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>target/images</outputDirectory>
							<resources>
								<resource>
									<directory>images</directory>
									<includes>
										<include>*.*</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
    <groupId>com.coderplus.maven.plugins</groupId>
        <artifactId>copy-rename-maven-plugin</artifactId>
            <version>1.0</version>
              <executions>
                  <execution>
                     <id>copy-file</id>
                       <phase>generate-sources</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                           <target>
        <copy todir="${build.dir}/jar/images">
          <fileset dir="${base.dir}/src/resources/images">
              <include name="*.gif" />
          </fileset>
      </copy>
    </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>-->
		</plugins>
	</build>
</project>
